[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

[dependencies]
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"

